Edit comments and docstrings

--- a/bf_performance.ipynb
+++ b/bf_performance.ipynb
@@ -188,12 +188,11 @@
     "            list: A list of random words not in the dataset.\n",
     "\n",
     "        This method generates random words not in the given dataset. It is useful for testing, especially for\n",
-    "        evaluating the Bloom Filter's false positive rate. The method uses a set for faster lookups and continues\n",
-    "        generating words until the required number is reached.\n",
+    "        evaluating the Bloom Filter's false positive rate.\n",
     "        \"\"\"\n",
-    "        dataset_set = set(dataset)  # Convert the dataset to a set for faster lookups\n",
+    "        dataset_set = set(dataset)\n",
     "        random_words = set()\n",
-    "        characters = 'abcdefghijklmnopqrstuvwxyz'  # Characters to use for generating random words\n",
+    "        characters = 'abcdefghijklmnopqrstuvwxyz'\n",
     "\n",
     "        while len(random_words) < num_words:\n",
     "            word = ''.join(random.choices(characters, k=length))  # Generate a random word\n",
@@ -337,22 +336,6 @@
     "\n",
     "        # Display the plots\n",
     "        plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## BloomFilterPerformanceTest Class (continued)\n",
-    "Methods for running tests, measuring time and memory, calculating false positive rate, printing and plotting results."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Printing and Plotting Results\n",
-    "Method for printing and plotting test results.\n"
    ]
   },
   {
