Duplicated code removed bloomfilter/bloomfilter_performance

--- a/Bloomfilter_all.ipynb
+++ b/Bloomfilter_all.ipynb
@@ -26,8 +26,7 @@
     "import tracemalloc\n",
     "import matplotlib.pyplot as plt\n",
     "import random\n",
-    "import timeit\n",
-    "import os"
+    "import timeit"
    ]
   },
   {
