Unified the name for bloomfilter

--- a/Bloomfilter_all.ipynb
+++ b/Bloomfilter_all.ipynb
@@ -187,8 +187,8 @@
     "            for _ in range(self.num_runs):\n",
     "                tracemalloc.start()  # Start measuring memory usage\n",
     "\n",
-    "                bf = self.create_bf_from_dataset(sample_dataset)  # Create the Bloom Filter\n",
-    "                creation_time = timeit.timeit(lambda: self.create_bf_from_dataset(\n",
+    "                bf = BloomFilter(sample_dataset)  # Create the Bloom Filter\n",
+    "                creation_time = timeit.timeit(lambda: BloomFilter(\n",
     "                    sample_dataset), number=1)  # Measure creation time\n",
     "\n",
     "                current, peak = tracemalloc.get_traced_memory()  # Measure memory usage\n",
