Added test insertion part into the notebook

--- a/Bloomfilter_all.ipynb
+++ b/Bloomfilter_all.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BloomFilter Class\n",
+    "## Bloomfilter\n",
     "Define the `BloomFilter` class with methods for initializing, inserting, and searching elements.\n"
    ]
   },
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BloomFilterPerformanceTest Class\n",
+    "## Performance\n",
     "Define the `BloomFilterPerformanceTest` class with methods for setting up tests, creating and searching the Bloom Filter, generating random words, and running tests.\n"
    ]
   },
@@ -198,15 +198,18 @@
     "                self.results[size]['creation_times'].append(creation_time)\n",
     "                self.results[size]['memory_usages'].append(memory_usage)\n",
     "\n",
+    "                # measure insertion time\n",
     "                insertion_time = timeit.timeit(lambda: [bf.insert_into_bit_array(element)\n",
     "                                                        for element in sample_dataset], number=1)\n",
     "                self.results[size]['insertion_times'].append(insertion_time)\n",
     "\n",
+    "                # measure search time\n",
     "                search_time = timeit.timeit(lambda: self.search_bf(bf, sample_dataset),\n",
     "                                            number=1)  # Measure search time\n",
     "                average_search_time = search_time / len(sample_dataset)  # Calculate average search time per item\n",
     "                self.results[size]['average_search_times'].append(average_search_time)\n",
     "\n",
+    "                # check for false positives\n",
     "                false_positives = 0  # Check for false positives\n",
     "                random_words = self.generate_random_words_not_in_dataset(sample_dataset, self.num_queries)\n",
     "                for test_element in random_words:\n",
@@ -317,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Main Script\n",
+    "## Plot the outcome\n",
     "Load the dataset and execute the performance tests.\n"
    ]
   },
