--- a/Bloomfilter_all.ipynb
+++ b/Bloomfilter_all.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,270 @@
     "            index = int(digest, 16) % self.m  # Convert hash to an index within the bit array\n",
     "            if not self.bit_array[index]:  # If any bit is not set, the element is definitely not in the set\n",
     "                return False\n",
-    "        return True  # All bits are set, so the element might be in the set"
+    "        return True  # All bits are set, so the element might be in the set\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"Bloom_Filter(size={len(self.bit_array)}, P={self.P}, dataset_size={len(self.dataset)})\"\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Bloom Filter with {self.word_count} items and false positive rate {self.P}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing\n",
+    "\n",
+    "We will now insert different types of data and datasets to inspect whether our code works correctly. After we will also perform some search tests."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing datasets to create bloomfilters\n",
+    "\n",
+    "First, we import different types of data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.BloomFilter object at 0x10e4f3b20>\n",
+      "<__main__.BloomFilter object at 0x10e4f3100>\n",
+      "<__main__.BloomFilter object at 0x10e4f3bb0>\n",
+      "<__main__.BloomFilter object at 0x10e4f2470>\n",
+      "<__main__.BloomFilter object at 0x10e4f1f30>\n",
+      "<__main__.BloomFilter object at 0x10e4f28c0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. URLs\n",
+    "urls = [\n",
+    "    \"http://example.com\",\n",
+    "    \"https://example.org\",\n",
+    "    \"http://test.com\",\n",
+    "    \"https://mywebsite.net\",\n",
+    "    \"http://anotherexample.com\",\n",
+    "]\n",
+    "url_bloom = BloomFilter(urls)\n",
+    "print(url_bloom)\n",
+    "\n",
+    "# 2. emails\n",
+    "emails = [\n",
+    "    \"example1@example.com\",\n",
+    "    \"user2@test.org\",\n",
+    "    \"contact@mydomain.net\",\n",
+    "    \"admin@website.com\",\n",
+    "    \"info@anotherexample.com\",\n",
+    "]\n",
+    "email_bloom = BloomFilter(emails)\n",
+    "print(email_bloom)\n",
+    "\n",
+    "# 3. IP addresses\n",
+    "ip_addresses = [\n",
+    "    \"192.168.0.1\",\n",
+    "    \"10.0.0.2\",\n",
+    "    \"172.16.0.3\",\n",
+    "    \"8.8.8.8\",\n",
+    "    \"127.0.0.1\",\n",
+    "]\n",
+    "IP_bloom = BloomFilter(ip_addresses)\n",
+    "print(IP_bloom)\n",
+    "\n",
+    "# 4. English words\n",
+    "english_words = [\n",
+    "    \"apple\",\n",
+    "    \"banana\",\n",
+    "    \"cherry\",\n",
+    "    \"date\",\n",
+    "    \"elderberry\",\n",
+    "    \"fig\",\n",
+    "    \"grape\",\n",
+    "    \"honeydew\",\n",
+    "    \"kiwi\",\n",
+    "    \"lemon\",\n",
+    "]\n",
+    "words_bloom = BloomFilter(english_words)\n",
+    "print(words_bloom)\n",
+    "\n",
+    "# 5. DNA\n",
+    "dna_sequences = [\n",
+    "    \"AGCTTAGCTA\",\n",
+    "    \"CGTAGCTAGC\",\n",
+    "    \"TGCATGCACT\",\n",
+    "    \"GCTAGCTAGC\",\n",
+    "    \"TAGCTAGCTA\",\n",
+    "]\n",
+    "DNA_bloom = BloomFilter(dna_sequences)\n",
+    "print(DNA_bloom)\n",
+    "\n",
+    "# 6. Importing data with words of a short length\n",
+    "four_letter_words = [\n",
+    "    \"bark\", \"clap\", \"dear\", \"echo\", \"fist\", \"gift\", \"hint\", \"jazz\", \"kite\", \"lamp\",\n",
+    "    \"mint\", \"nest\", \"pace\", \"quip\", \"rain\", \"snow\", \"toad\", \"urge\", \"vase\", \"warp\",\n",
+    "    \"arch\", \"bank\", \"dove\", \"flip\", \"gold\", \"hail\", \"jump\", \"leaf\", \"muse\", \"note\"\n",
+    "]\n",
+    "four_letter_bloom = BloomFilter(four_letter_words)\n",
+    "print(four_letter_bloom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We noted that all the data gets loaded in correctly.\n",
+    "\n",
+    "Next, we import different types of datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.BloomFilter object at 0x105e620e0>\n",
+      "<__main__.BloomFilter object at 0x105f38730>\n",
+      "<__main__.BloomFilter object at 0x105e625c0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Txt file with words\n",
+    "\n",
+    "words_dataset = []\n",
+    "with open(\"words.txt\", 'r') as datafile:\n",
+    "    words_dataset = [line.strip() for line in datafile]\n",
+    "\n",
+    "wordtxt_bloom = BloomFilter(words_dataset)\n",
+    "print(wordtxt_bloom)\n",
+    "\n",
+    "# 2. Txt file with sequences\n",
+    "\n",
+    "sequences_dataset = []\n",
+    "with open(\"sequences.txt\", 'r') as datafile:\n",
+    "    sequences_dataset = [line.strip() for line in datafile]\n",
+    "\n",
+    "sequences_bloom = BloomFilter(sequences_dataset)\n",
+    "print(sequences_bloom)\n",
+    "\n",
+    "# 3. Csv file with a 1000 English words\n",
+    "\n",
+    "english_words_dataset = []\n",
+    "with open(\"English_words.csv\", 'r') as datafile:\n",
+    "    english_words_dataset = [line.strip() for line in datafile]\n",
+    "\n",
+    "english_words_bloom = BloomFilter(english_words_dataset)\n",
+    "print(english_words_bloom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We noted that also for these larger datasets imported into the bloomfilter, the bloomfilter gets generated."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Search in the bloomfilters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "True positive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dna_sequences_test = [\n",
+    "    \"AGCTTAGCTA\",\n",
+    "    \"CGTAGCTAGC\",\n",
+    "    \"TGCATGCACT\",\n",
+    "    \"GCTAGCTAGC\"]\n",
+    "\n",
+    "for word in dna_sequences_test:\n",
+    "    result = DNA_bloom.search_bit_array(word)\n",
+    "    print(f\"Word '{word}' found: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "False positive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "True negative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "four_letter_words_test = [\n",
+    "    \"bark\", \"test\", \"four\", \"unbelivehrdafkd\", \"fist\", \"gift\", \"hint\", \"jazz\", \"kite\", \"lamp\",\n",
+    "    \"mint\", \"nest\", \"pace\", \"quip\", \"rain\", \"snow\", \"toad\", \"urge\", \"vase\", \"warp\",\n",
+    "    \"arch\", \"bank\", \"dove\", \"flip\", \"gold\", \"hail\", \"jump\", \"leaf\", \"muse\", \"note\"\n",
+    "]\n",
+    "\n",
+    "for word in four_letter_words_test:\n",
+    "    result = four_letter_bloom.search_bit_array(word)\n",
+    "    print(f\"Word '{word}' found: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word 'agony' found: False\n",
+      "Word 'bread' found: False\n",
+      "Word 'dad' found: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in [\"agony\", \"bread\", \"dad\"]:\n",
+    "    result = english_words_bloom.search_bit_array(word)\n",
+    "    print(f\"Word '{word}' found: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, we did not find any false negatives in our testing."
    ]
   },
   {
@@ -449,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
