Completed the false positive testing

--- a/Bloomfilter_all.ipynb
+++ b/Bloomfilter_all.ipynb
@@ -138,19 +138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.BloomFilter object at 0x10e4f3b20>\n",
-      "<__main__.BloomFilter object at 0x10e4f3100>\n",
-      "<__main__.BloomFilter object at 0x10e4f3bb0>\n",
-      "<__main__.BloomFilter object at 0x10e4f2470>\n",
-      "<__main__.BloomFilter object at 0x10e4f1f30>\n",
-      "<__main__.BloomFilter object at 0x10e4f28c0>\n"
+      "<__main__.BloomFilter object at 0x10e4f1ff0>\n",
+      "<__main__.BloomFilter object at 0x105e626e0>\n",
+      "<__main__.BloomFilter object at 0x105e62a70>\n",
+      "<__main__.BloomFilter object at 0x10e4f0400>\n",
+      "<__main__.BloomFilter object at 0x105e62c20>\n",
+      "<__main__.BloomFilter object at 0x105e61f60>\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
     "    \"https://mywebsite.net\",\n",
     "    \"http://anotherexample.com\",\n",
     "]\n",
-    "url_bloom = BloomFilter(urls)\n",
+    "url_bloom = BloomFilter(urls, P=0.1) #note that we change the P value to performance false negative testing\n",
     "print(url_bloom)\n",
     "\n",
     "# 2. emails\n",
@@ -201,7 +201,7 @@
     "    \"kiwi\",\n",
     "    \"lemon\",\n",
     "]\n",
-    "words_bloom = BloomFilter(english_words)\n",
+    "words_bloom = BloomFilter(english_words, P=0.1) #note that we change the P value to performance false negative testing)\n",
     "print(words_bloom)\n",
     "\n",
     "# 5. DNA\n",
@@ -256,7 +256,7 @@
     "with open(\"words.txt\", 'r') as datafile:\n",
     "    words_dataset = [line.strip() for line in datafile]\n",
     "\n",
-    "wordtxt_bloom = BloomFilter(words_dataset)\n",
+    "wordtxt_bloom = BloomFilter(words_dataset, P=0.1) #note that we change the P value to performance false negative testing\n",
     "print(wordtxt_bloom)\n",
     "\n",
     "# 2. Txt file with sequences\n",
@@ -296,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "True positive"
+    "1. True positive"
    ]
   },
   {
@@ -317,17 +317,152 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word 'CGTATCTTCGTGTGCTCTCCTTTAGAACTGCATCTCTAGAGTCAGAGAGG' found: True\n",
+      "Word 'AGAGCATTGTATCCGACCGAACTCCTGTAGTGACAAAACCGTCCTCAATG' found: True\n",
+      "Word 'TCGACCGAACTCCCTGCCTCTCATCGCGGATCACGTCCGCCGAGATAATA' found: True\n"
+     ]
+    }
+   ],
    "source": [
-    "False positive"
+    "sequences_test = [\n",
+    "\"CGTATCTTCGTGTGCTCTCCTTTAGAACTGCATCTCTAGAGTCAGAGAGG\",\n",
+    "\"AGAGCATTGTATCCGACCGAACTCCTGTAGTGACAAAACCGTCCTCAATG\",\n",
+    "\"TCGACCGAACTCCCTGCCTCTCATCGCGGATCACGTCCGCCGAGATAATA\"]\n",
+    "\n",
+    "for word in sequences_test:\n",
+    "    result = sequences_bloom.search_bit_array(word)\n",
+    "    print(f\"Word '{word}' found: {result}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "True negative"
+    "We noted that all the words were correctly found."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. False positive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word 'https://www.bbc.com/' found: False\n",
+      "Word 'https://www.twitter.com/' found: False\n",
+      "Word 'https://www.youtube.com/' found: False\n",
+      "Word 'https://www.amazon.com/' found: False\n",
+      "Word 'https://www.google.com/' found: False\n",
+      "Word 'https://www.khanacademy.org/' found: False\n",
+      "Word 'https://www.theverge.com/' found: False\n",
+      "Word 'https://www.webmd.com/' found: False\n",
+      "Word 'https://www.booking.com/' found: True\n",
+      "Word 'https://www.imdb.com/' found: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "url_bloom_test = [\n",
+    "    \"https://www.bbc.com/\",\n",
+    "    \"https://www.twitter.com/\",\n",
+    "    \"https://www.youtube.com/\",\n",
+    "    \"https://www.amazon.com/\",\n",
+    "    \"https://www.google.com/\",\n",
+    "    \"https://www.khanacademy.org/\",\n",
+    "    \"https://www.theverge.com/\",\n",
+    "    \"https://www.webmd.com/\",\n",
+    "    \"https://www.booking.com/\",\n",
+    "    \"https://www.imdb.com/\"\n",
+    "]\n",
+    "\n",
+    "for word in url_bloom_test:\n",
+    "    result = url_bloom.search_bit_array(word)\n",
+    "    print(f\"Word '{word}' found: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We noted that one title was returned as found even though it wasn't in the original list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word 'bark' found: True\n",
+      "Word 'test' found: False\n",
+      "Word 'four' found: False\n",
+      "Word 'unbelivehrdafkd' found: False\n",
+      "Word 'fist' found: True\n",
+      "Word 'gift' found: True\n",
+      "Word 'hint' found: True\n",
+      "Word 'jazz' found: True\n",
+      "Word 'kite' found: True\n",
+      "Word 'lamp' found: False\n",
+      "Word 'mint' found: True\n",
+      "Word 'nest' found: True\n",
+      "Word 'pace' found: False\n",
+      "Word 'quip' found: True\n",
+      "Word 'rain' found: True\n",
+      "Word 'snow' found: False\n",
+      "Word 'toad' found: True\n",
+      "Word 'urge' found: True\n",
+      "Word 'vase' found: True\n",
+      "Word 'warp' found: False\n",
+      "Word 'arch' found: True\n",
+      "Word 'bank' found: False\n",
+      "Word 'dove' found: False\n",
+      "Word 'flip' found: False\n",
+      "Word 'gold' found: False\n",
+      "Word 'hail' found: True\n",
+      "Word 'jump' found: False\n",
+      "Word 'leaf' found: False\n",
+      "Word 'muse' found: False\n",
+      "Word 'note' found: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "wordtxt_bloom_test = [\n",
+    "    \"bark\", \"test\", \"four\", \"unbelivehrdafkd\", \"fist\", \"gift\", \"hint\", \"jazz\", \"kite\", \"lamp\",\n",
+    "    \"mint\", \"nest\", \"pace\", \"quip\", \"rain\", \"snow\", \"toad\", \"urge\", \"vase\", \"warp\",\n",
+    "    \"arch\", \"bank\", \"dove\", \"flip\", \"gold\", \"hail\", \"jump\", \"leaf\", \"muse\", \"note\"\n",
+    "]\n",
+    "\n",
+    "for word in wordtxt_bloom_test:\n",
+    "    result = wordtxt_bloom.search_bit_array(word)\n",
+    "    print(f\"Word '{word}' found: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. True negative"
    ]
   },
   {
@@ -345,6 +480,13 @@
     "for word in four_letter_words_test:\n",
     "    result = four_letter_bloom.search_bit_array(word)\n",
     "    print(f\"Word '{word}' found: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We noted that the words that we inserted (test, four and unbelivehrdafkd) were not found as expected."
    ]
   },
   {
