Updated the txt file for words

--- a/Bloomfilter_all.ipynb
+++ b/Bloomfilter_all.ipynb
@@ -258,7 +258,7 @@
     "# 1. Txt file with words\n",
     "\n",
     "words_dataset = []\n",
-    "with open(\"words.txt\", 'r') as datafile:\n",
+    "with open(\"English_words.txt\", 'r') as datafile:\n",
     "    words_dataset = [line.strip() for line in datafile]\n",
     "\n",
     "# note that we change the P value to performance false negative testing\n",
